# SAFE_demo

./: .gitignore  pyproject.toml
notebooks/: 00_tau_filter.ipynb  01_SAFE_demo.ipynb
notebooks/waveforms/: diff_reg.npz
src/safe_demo/: filtering.py  safe_params.py
