[project]
authors = [{name = "mloecher", email = "michael.w.loecher@gmail.com"}]
dependencies = []
name = "SAFE_demo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
safe_demo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
pip = ">=25.2,<26"
numpy = ">=2.3.2,<3"
matplotlib = ">=3.10.6,<4"
jupyter = ">=1.1.1,<2"
jupyterlab = ">=4.4.6,<5"
